k8s/tracing/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitor
  labels:
    name: monitor
    kubernetes.io/metadata.name: monitor
